--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - The Bread Basket</title>
+    <title>TheBreadBasket</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/about.css">
 </head>
